--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,21 +18,25 @@
 				<h2 class="products-title">Basado en tu última visita</h2>
 			</div>
 			<!-- Show the "visited" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products/detail/¿?">
+			<% for(let i=0; i<productosVisitados.length; i++) {%>
+			<div class="col-12 col-sm-6 col-lg-3">				
+				<section class="product-box">					
+					<a href="/products/detail/<%= productosVisitados[i].id %>">
 						<figure class="product-box_image">
-							<img src="/images/products/¿?" alt="imagen de producto">
+							<img src="/images/products/<%= productosVisitados[i].image %>" alt="imagen de producto">
 						</figure>
 						<article class="product-box_data">
-							<h2>FINAL PRICE</h2>
-							<span>DISCOUNT % OFF</span>
-							<p>PRODUCT NAME</p>
+							<h2><%= productosVisitados[i].price %></h2>
+							<span><%= productosVisitados[i].discount %> % OFF</span>
+							<p><%= productosVisitados[i].name %></p>
 							<i class="fas fa-truck"></i>
 						</article>
 					</a>
+					
 				</section>
+				
 			</div>
+			<%}%>
 		</div>
 	</div>
 	<!-- /ultima visita -->
@@ -44,21 +48,23 @@
 				<h2 class="products-title">Ofertas</h2>
 			</div>
 			<!-- Show the "in-sale" products -->
+			<% for(let i=0; i<productosEnOferta.length; i++) {%>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="/products/detail/¿?">
+					<a href="/products/detail/<%= productosEnOferta[i].id %>">
 						<figure class="product-box_image">
-							<img src="/images/products/¿?" alt="imagen de producto">
+							<img src="/images/products/<%= productosEnOferta[i].image %>" alt="imagen de producto">
 						</figure>
 						<article class="product-box_data">
-							<h2>FINAL PRICE</h2>
-							<span>DISCOUNT % OFF</span>
-							<p>PRODUCT NAME</p>
+							<h2><%= productosEnOferta[i].price %></h2>
+							<span><%= productosEnOferta[i].discount %> % OFF</span>
+							<p><%= productosEnOferta[i].name %></p>
 							<i class="fas fa-truck"></i>
 						</article>
 					</a>
 				</section>
 			</div>
+			<%}%>
 		</div>
 	</div>
 	<!-- /Ofertas -->
