--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -14,7 +14,11 @@
         </div>
       </div>
       <div class="col-12">
-        <form action="/products/create/" method="POST">
+        <form
+          action="/products/create/"
+          method="POST"
+          enctype="multipart/form-data"
+        >
           <div class="row product-detail">
             <div class="col-12 col-md-6">
               <label for="name" class="form-label">Nombre del producto:</label>
@@ -53,6 +57,10 @@
                 <option value="in-sale">En oferta</option>
                 <option value="visited">Últimos agregados</option>
               </select>
+            </div>
+            <div class="col-12 col-md-6">
+              <label for="image" class="form-label">Cargue una foto:</label>
+              <input type="file" name="image" id="image" />
             </div>
             <div class="col-12">
               <label for="description" class="form-label">Descipción:</label>
